Try to increase heap size. Ref #116